--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>LMJ Construcciones</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="../v2 (finale)/main/mainer.css">
-  <link rel="stylesheet" href="../v2 (finale)/main/hero-carrousel.css">
+  <link rel="stylesheet" href="main/mainer.css">
+  <link rel="stylesheet" href="main/hero-carrousel.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg custom-navbar shadow-sm">
@@ -364,7 +364,7 @@
       
         </div>
       </footer>
-      <script src="../v2 (finale)/main/main_finale.js"></script>
+      <script src="main/main_finale.js"></script>
       <script src="burger-menu.js"></script>
   </body>
 </html>
