--- a/cotizacion.html
+++ b/cotizacion.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LMJ Construcciones (cotizacion)</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"rel="stylesheet"/>
     <link rel="stylesheet" href="cotizacion/cotizacion.css" />
+    <link rel="stylesheet" href="generales/burguer-menu.css" />
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg custom-navbar shadow-sm">
@@ -23,12 +19,7 @@
         </a>
 
         <!-- Mobile Toggle -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#mainNav"
-        >
+        <button class="navbar-toggler"type="button"data-bs-toggle="collapse"data-bs-target="#mainNav">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -36,7 +27,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="mainNav">
           <ul class="navbar-nav align-items-lg-center gap-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" href="main_finale.html">inicio</a>
+              <a class="nav-link active" href="index.html">inicio</a>
             </li>
 
             <li class="nav-item">
@@ -57,12 +48,7 @@
 
             <!-- Dropdown -->
             <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-              >
+              <a class="nav-link dropdown-toggle"href="#"role="button"data-bs-toggle="dropdown">
                 mas
               </a>
               <ul class="dropdown-menu">
@@ -149,7 +135,7 @@
 
             <p class="mt-3 mb-2">¿Querés ser más específico con tu proyecto?</p>
 
-            <a href="#" class="btn btn-outline-primary px-4">
+            <a href="contacto.html" class="btn btn-outline-primary px-4">
               Contactanos por correo
             </a>
           </div>
@@ -315,5 +301,6 @@
       </div>
     </footer>
     <script src="cotizacion/cotizacion.js"></script>
+    <script src="generales/burguer-menu.js"></script>
   </body>
 </html>
