--- a/proyectos.html
+++ b/proyectos.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LMJ Construcciones (proyectos)</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"rel="stylesheet"/>
     <link rel="stylesheet" href="proyectos/proyectos.css" />
+    <link rel="stylesheet" href="generales/burguer-menu.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg custom-navbar shadow-sm">
@@ -36,7 +31,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="mainNav">
           <ul class="navbar-nav align-items-lg-center gap-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" href="main_finale.html">inicio</a>
+              <a class="nav-link active" href="index.html">inicio</a>
             </li>
 
             <li class="nav-item">
@@ -362,5 +357,6 @@
         </div>
       </div>
     </footer>
+    <script src="generales/burguer-menu.js"></script>
   </body>
 </html>
