--- a/index.html
+++ b/index.html
@@ -86,12 +86,7 @@
 
             <!-- Dropdown -->
             <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-              >
+              <a class="nav-link dropdown-toggle"href="#"role="button"data-bs-toggle="dropdown">
                 mas
               </a>
               <ul class="dropdown-menu">
@@ -460,7 +455,6 @@
             </div>
           </div>
         </div>
-        <!-- /FILA 2 -->
       </div>
     </section>
 
@@ -469,7 +463,6 @@
         <div class="text-center mb-4">
           <h3 class="fw-bold">Contactanos</h3>
         </div>
-
         <form>
           <div class="row g-3">
             <div class="col-md-6">
