--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
         </div>
       </div>
-
+    </section>
       <!-- Controles -->
       <button class="hc-arrow hc-arrow--prev" aria-label="Anterior">
         <svg
@@ -489,7 +489,6 @@
         </form>
       </div>
     </section>
-
     <footer class="footer-section text-white">
       <div class="container py-5">
         <!-- Top Row -->
